fixing responsiveness on mobile

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -541,12 +541,17 @@ header {
         display: flex;
         flex-direction: column;
         padding-top: 70px;
+        align-items: center;
     }
 
     .project-info img,
     .project-info video {
         height: auto;
+        width: 100%;
     }
+
+
+
 
 
 
